# LLM-learning

./: pyproject.toml
intent_predication/: gcp_upload.py  hyper_parmeter_tuning.py  image.py  infereing_one_text.py  inferrsening_class.py  logger_utlity.py  model_evalution.py  model_splilit.py  model_utility.py  models_run.py  plot.ipynb  test_type.py  trt.txt
llm_fine/: Feature_based_learning_LLM.ipynb  Fine_tune_LLM.ipynb  KDSLM.ipynb  feature_based_learning.ipynb  fine_tune.py
